--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
   			<h2>Here are my projects</h2>
   			<div id="project-container">
   				<div class="project">
-  					<img src="./images/github.png">
-  					<p>Tester Project</p>
+  					<a href="http://standardized-tester.herokuapp.com" target="_blank"><img src="./images/github.png"></a>
+  					<p>Standardized Tester</p>
+  					<a href="https://github.com/alps991/standardizedtester" target="_blank">Source Code</a>
   				</div>
   				<div class="project">
-  					<img src="./images/github.png">
+  					<a href="http://responsive-calculator.herokuapp.com" target="_blank"><img src="./images/github.png"></a>
   					<p>Responsive Calculator</p>
+  					<a href="https://github.com/alps991/Responsive-Calculator" target="_blank">Source Code</a>
   				</div>
   				<div class="project">
-  					<img src="./images/github.png">
-  					<p>Placeholder</p>
+  					<a href="http://minesweeper-alper.herokuapp.com" target="_blank"><img src="./images/github.png"></a>
+  					<p>Minesweeper</p>
+  					<a href="https://github.com/alps991/Minesweeper" target="_blank">Source Code</a>
   				</div>
   				<div class="project">
   					<img src="./images/github.png">
