--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
   			<h2>Here are my projects</h2>
   			<div id="project-container">
   				<div class="project">
-  					<a href="http://standardized-tester.herokuapp.com" target="_blank"><img src="./images/github.png"></a>
-  					<p>Standardized Tester</p>
+  					<a href="http://standardized-tester.herokuapp.com" target="_blank"><img src="x"></a>
+  					<p>Standardized Tester</p><br>
   					<a href="https://github.com/alps991/standardizedtester" target="_blank">Source Code</a>
   				</div>
   				<div class="project">
-  					<a href="http://responsive-calculator.herokuapp.com" target="_blank"><img src="./images/github.png"></a>
-  					<p>Responsive Calculator</p>
+  					<a href="http://responsive-calculator.herokuapp.com" target="_blank"><img src="./images/calc.png"></a>
+  					<p>Responsive Calculator</p><br>
   					<a href="https://github.com/alps991/Responsive-Calculator" target="_blank">Source Code</a>
   				</div>
   				<div class="project">
-  					<a href="http://minesweeper-alper.herokuapp.com" target="_blank"><img src="./images/github.png"></a>
-  					<p>Minesweeper</p>
+  					<a href="http://minesweeper-alper.herokuapp.com" target="_blank"><img src="./images/minesweeper.png"></a>
+  					<p>Minesweeper</p><br>
   					<a href="https://github.com/alps991/Minesweeper" target="_blank">Source Code</a>
   				</div>
   				<div class="project">
-  					<img src="./images/github.png">
+  					<img src="x">
   					<p>Placeholder</p>
   				</div>
   				<div class="project">
-  					<img src="./images/github.png">
+  					<img src="x">
   					<p>Placeholder</p>
   				</div>
   				<div class="project">
-  					<img src="./images/github.png">
+  					<img src="x">
   					<p>Placeholder</p>
   				</div>
   			</div>
