--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
   	<section id="contact">
   		<h2>Contact Me</h2>
+  		<a class="profile-link" target="blank" href="mailto:alper.donmez490@gmail.com"><img src="./images/mail.png"></a>
   		<a class="profile-link" target="blank" href="https://github.com/alps991"><img src="./images/github.png"></a>
   		<a class="profile-link" target="blank" href="http://linkedin.com"><img src="./images/linkedin.png"></a>
   	</section>
