updated styling and images

--- a/index.html
+++ b/index.html
@@ -28,31 +28,28 @@
 			<h2>Here are my projects</h2>
 			<div id="project-container">
 				<div class="project">
-					<a href="http://standardized-tester.herokuapp.com" target="_blank"><img src="x"></a>
-					<p>Standardized Tester</p><br>
+					<h3>Standardized Tester</h3>
+					<a href="http://standardized-tester.herokuapp.com" target="_blank">
+						<img src="./images/tester.png">
+					</a>
+					<p>React, Redux, Webpack, SCSS</p>
 					<a href="https://github.com/alps991/standardizedtester" target="_blank">Source Code</a>
 				</div>
 				<div class="project">
-					<a href="http://responsive-calculator.herokuapp.com" target="_blank"><img src="./images/calc.png"></a>
-					<p>Responsive Calculator</p><br>
+					<h3>Responsive Calculator</h3>
+					<a href="http://responsive-calculator.herokuapp.com" target="_blank">
+						<img src="./images/calc.png">
+					</a>
+					<p>HTML, CSS, jQuery</p>
 					<a href="https://github.com/alps991/Responsive-Calculator" target="_blank">Source Code</a>
 				</div>
 				<div class="project">
-					<a href="http://minesweeper-alper.herokuapp.com" target="_blank"><img src="./images/minesweeper.png"></a>
-					<p>Minesweeper</p><br>
+					<h3>Minesweeper</h3>
+					<a href="http://minesweeper-alper.herokuapp.com" target="_blank">
+						<img src="./images/minesweeper.png">
+					</a>
+					<p>HTML, CSS, jQuery</p>
 					<a href="https://github.com/alps991/Minesweeper" target="_blank">Source Code</a>
-				</div>
-				<div class="project">
-					<img src="x">
-					<p>Placeholder</p>
-				</div>
-				<div class="project">
-					<img src="x">
-					<p>Placeholder</p>
-				</div>
-				<div class="project">
-					<img src="x">
-					<p>Placeholder</p>
 				</div>
 			</div>
 		</div>
@@ -60,9 +57,15 @@
 
 	<section id="contact">
 		<h2>Contact Me</h2>
-		<a class="profile-link" target="blank" href="mailto:alper.donmez490@gmail.com"><img src="./images/mail.png"></a>
-		<a class="profile-link" target="blank" href="https://github.com/alps991"><img src="./images/github.png"></a>
-		<a class="profile-link" target="blank" href="http://linkedin.com"><img src="./images/linkedin.png"></a>
+		<a class="profile-link" target="blank" href="mailto:alper.donmez490@gmail.com">
+			<img src="./images/mail.png">
+		</a>
+		<a class="profile-link" target="blank" href="https://github.com/alps991">
+			<img src="./images/github.png">
+		</a>
+		<a class="profile-link" target="blank" href="http://linkedin.com">
+			<img src="./images/linkedin.png">
+		</a>
 	</section>
 
 	<script src="./scripts/main.js"></script>
