updated images and styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Alper's Portfolio</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/styles.css">
 	<script src="./scripts/jquery-3.3.1.min.js"></script>
 	<script src="./scripts/animatescroll.min.js"></script>
 </head>
@@ -38,7 +39,7 @@
 				<div class="project">
 					<h3>Responsive Calculator</h3>
 					<a href="http://responsive-calculator.herokuapp.com" target="_blank">
-						<img src="./images/calc.png">
+						<img src="./images/calc.jpg">
 					</a>
 					<p>HTML, CSS, jQuery</p>
 					<a href="https://github.com/alps991/Responsive-Calculator" target="_blank">Source Code</a>
