small styling updates

--- a/index.html
+++ b/index.html
@@ -59,15 +59,17 @@
 
 	<section id="contact">
 		<h2>Contact Me</h2>
-		<a class="profile-link" target="blank" href="mailto:alper.donmez490@gmail.com">
-			<img src="./images/mail.png">
-		</a>
-		<a class="profile-link" target="blank" href="https://github.com/alps991">
-			<img src="./images/github.png">
-		</a>
-		<a class="profile-link" target="blank" href="http://linkedin.com">
-			<img src="./images/linkedin.png">
-		</a>
+		<div id="profile-images">
+			<a class="profile-link" target="blank" href="mailto:alper.donmez490@gmail.com">
+				<img src="./images/mail.png">
+			</a>
+			<a class="profile-link" target="blank" href="https://github.com/alps991">
+				<img src="./images/github.png">
+			</a>
+			<a class="profile-link" target="blank" href="http://linkedin.com">
+				<img src="./images/linkedin.png">
+			</a>
+		</div>
 	</section>
 
 	<script src="./scripts/main.js"></script>
