--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<a class="profile-link" target="blank" href="https://github.com/alps991">
 				<img src="./images/github.png">
 			</a>
-			<a class="profile-link" target="blank" href="http://linkedin.com">
+			<a class="profile-link" target="blank" href="https://www.linkedin.com/in/alper-donmez-b604b493/">
 				<img src="./images/linkedin.png">
 			</a>
 		</div>
