added hover animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Alper's Portfolio</title>
 	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
 	<link rel="stylesheet" href="styles/styles.css">
 	<script src="./scripts/jquery-3.3.1.min.js"></script>
 	<script src="./scripts/animatescroll.min.js"></script>
@@ -29,29 +30,59 @@
 		<div class="project-title">
 			<h2>Here are my projects</h2>
 			<div id="project-container">
+
 				<div class="project">
-					<h3>Standardized Tester</h3>
-					<a href="http://standardized-tester.herokuapp.com" target="_blank">
-						<img src="./images/tester.png">
-					</a>
-					<p>React, Redux, Webpack, SCSS</p>
-					<a href="https://github.com/alps991/standardizedtester" target="_blank">Source Code</a>
+					<div class="caption">
+						<h3>Standardized Tester</h3>
+						<div class="information">
+							<div class="icons">
+								<a href="https://github.com/alps991/standardizedtester" target="_blank">
+									<i class="fab fa-github"></i>
+								</a>
+								<a href="http://standardized-tester.herokuapp.com" target="_blank">
+									<i class="fa fa-link"></i>
+								</a>
+							</div>
+							<p>React, Redux, Webpack, SCSS</p>
+						</div>
+					</div>
+					<img src="./images/tester.png">
 				</div>
+
 				<div class="project">
-					<h3>Responsive Calculator</h3>
-					<a href="http://responsive-calculator.herokuapp.com" target="_blank">
-						<img src="./images/calc.jpg">
-					</a>
-					<p>HTML, CSS, jQuery</p>
-					<a href="https://github.com/alps991/Responsive-Calculator" target="_blank">Source Code</a>
+					<div class="caption">
+						<h3>Responsive Calculator</h3>
+						<div class="information">
+							<div class="icons">
+								<a href="https://github.com/alps991/Responsive-Calculator" target="_blank">
+									<i class="fab fa-github"></i>
+								</a>
+								<a href="http://responsive-calculator.herokuapp.com" target="_blank">
+									<i class="fa fa-link"></i>
+								</a>
+							</div>
+							<p>HTML, CSS, jQuery</p>
+						</div>
+					</div>
+					<img src="./images/calc.jpg">
 				</div>
+
 				<div class="project">
-					<h3>Minesweeper</h3>
-					<a href="http://minesweeper-alper.herokuapp.com" target="_blank">
-						<img src="./images/minesweeper.png">
-					</a>
-					<p>HTML, CSS, jQuery</p>
-					<a href="https://github.com/alps991/Minesweeper" target="_blank">Source Code</a>
+					<div class="caption">
+						<h3>Minesweeper</h3>
+						<div class="information">
+							<div class="icons">
+								<a href="https://github.com/alps991/Minesweeper" target="_blank">
+									<i class="fab fa-github"></i>
+								</a>
+								<a href="http://minesweeper-alper.herokuapp.com" target="_blank">
+									<i class="fa fa-link"></i>
+								</a>
+							</div>
+							<p>HTML, CSS, jQuery</p>
+						</div>
+					</div>
+					<img src="./images/minesweeper.png">
 				</div>
 			</div>
 		</div>
