updated styling and images

--- a/index.html
+++ b/index.html
@@ -31,53 +31,57 @@
 	<section id="about">
 		<h2>About Me</h2>
 		<p class="about-description">
-			I am an NYC-based recent graduate of Mechanical Engineering looking to move into the field of Web Development.
-			My primary skills involve ES6 Javascript with React and Redux, along with the web fundamentals of HTML5 and CSS3.
-			I am eager to learn and am more than willing to learn any new languages or technologies required
-			for the job.
+			I am an NYC-based Web Developer with experience using the MERN stack, currently seeking a challenging Full-stack or Front-end
+			Developer role. I am eager to learn and am more than willing to learn any new languages or technologies required for the
+			job.
 		</p>
-		<h3 class="skills-header">Skills</h3>
-		<table id="skills">
-			<tr>
-				<th>Languages</th>
-				<th>Libraries/Frameworks</th>
-				<th>Technologies</th>
-			</tr>
-			<tr>
-				<td>ES6+ Javascript</td>
-				<td>React</td>
-				<td>Git</td>
-			</tr>
-			<tr>
-				<td>Node.js</td>
-				<td>Redux</td>
-				<td>Webpack</td>
-			</tr>
-			<tr>
-				<td>HTML5</td>
-				<td>Express</td>
-				<td>Heroku</td>
-			</tr>
-			<tr>
-				<td>CSS3</td>
-				<td>jQuery</td>
-				<td>Firebase</td>
-			</tr>
-			<tr>
-				<td>SASS</td>
-				<td></td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>Python</td>
-				<td></td>
-				<td></td>
-			</tr>
-		</table>
+		<div id="skills">
+			<h3 class="skills-header">Skills</h3>
+			<table id="skills-table">
+				<tr>
+					<th>Languages</th>
+					<th>Libraries/Frameworks</th>
+					<th>Technologies</th>
+				</tr>
+				<tr>
+					<td>ES6+ Javascript</td>
+					<td>React</td>
+					<td>Git</td>
+				</tr>
+				<tr>
+					<td>Node.js</td>
+					<td>Redux</td>
+					<td>Webpack</td>
+				</tr>
+				<tr>
+					<td>HTML5</td>
+					<td>Express</td>
+					<td>Heroku</td>
+				</tr>
+				<tr>
+					<td>CSS3</td>
+					<td>jQuery</td>
+					<td>Firebase</td>
+				</tr>
+				<tr>
+					<td>SASS</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Python</td>
+					<td></td>
+					<td></td>
+				</tr>
+			</table>
+		</div>
+		<a id="resume" href="https://drive.google.com/open?id=14bqjhGOiH4i1KfcsPlZHt6TDsYVhMPwP" target="_blank">
+			<u>Resume</u>
+		</a>
 	</section>
 
 	<section id="projects">
-		<h2>Here are my projects</h2>
+		<h2>Projects</h2>
 		<div id="project-container">
 
 			<div class="project">
