fixed styling errors

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 			</table>
 		</div>
 		<a id="resume" href="https://drive.google.com/open?id=14bqjhGOiH4i1KfcsPlZHt6TDsYVhMPwP" target="_blank">
-			<u>Resume</u>
+			Resume
+			<i class="fas fa-external-link-alt"></i>
+
 		</a>
 	</section>
 
@@ -95,7 +97,7 @@
 								<i class="fab fa-github"></i>
 							</a>
 							<a href="http://standardized-tester.herokuapp.com" target="_blank">
-								<i class="fa fa-link"></i>
+								<i class="fas fa-external-link-alt"></i>
 							</a>
 						</div>
 						<p>React, Redux, Webpack, SCSS</p>
@@ -114,7 +116,7 @@
 								<i class="fab fa-github"></i>
 							</a>
 							<a href="http://responsive-calculator.herokuapp.com" target="_blank">
-								<i class="fa fa-link"></i>
+								<i class="fas fa-external-link-alt"></i>
 							</a>
 						</div>
 						<p>HTML, CSS, jQuery</p>
@@ -133,7 +135,7 @@
 								<i class="fab fa-github"></i>
 							</a>
 							<a href="http://minesweeper-alper.herokuapp.com" target="_blank">
-								<i class="fa fa-link"></i>
+								<i class="fas fa-external-link-alt"></i>
 							</a>
 						</div>
 						<p>HTML, CSS, jQuery</p>
