added url shortener project

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 	<section id="about">
 		<h2>About Me</h2>
 		<p class="about-description">
-			I am an NYC-based Web Developer with experience using the MERN stack, currently seeking a challenging Full-stack or Front-end
-			Developer role. I am eager to learn and am more than willing to learn any new languages or technologies required for the
+			I am an NYC-based Web Developer with experience using the MERN stack, currently seeking a challenging Full-stack or
+			Front-end
+			Developer role. I am eager to learn and am more than willing to learn any new languages or technologies required for
+			the
 			job.
 		</p>
 		<div id="skills">
@@ -101,6 +103,25 @@
 							</a>
 						</div>
 						<p>React, Redux, Webpack, SCSS</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="project">
+				<h3>URL Shortener</h3>
+				<img src="./images/url-shortener.png">
+				<div class="caption">
+					<h3 class="project-title">URL Shortener</h3>
+					<div class="information">
+						<div class="icons">
+							<a href="https://github.com/alps991/url-shortener" target="_blank">
+								<i class="fab fa-github"></i>
+							</a>
+							<a href="http://trim-url.herokuapp.com" target="_blank">
+								<i class="fas fa-external-link-alt"></i>
+							</a>
+						</div>
+						<p>Node, Express, MongoDB, Mongoose</p>
 					</div>
 				</div>
 			</div>
