updated skills and font sizes

--- a/index.html
+++ b/index.html
@@ -56,19 +56,24 @@
 					<td>Webpack</td>
 				</tr>
 				<tr>
-					<td>HTML5</td>
+					<td>SQL</td>
 					<td>Express</td>
-					<td>Heroku</td>
+					<td>MongoDB</td>
 				</tr>
 				<tr>
-					<td>CSS3</td>
+					<td>HTML5</td>
 					<td>jQuery</td>
 					<td>Firebase</td>
 				</tr>
 				<tr>
+					<td>CSS3</td>
+					<td></td>
+					<td>Heroku</td>
+				</tr>
+				<tr>
 					<td>SASS</td>
 					<td></td>
-					<td></td>
+					<td>MySQL</td>
 				</tr>
 				<tr>
 					<td>Python</td>
@@ -89,7 +94,7 @@
 		<div id="project-container">
 
 			<div class="project">
-				<h3>Standardized Tester</h3>
+				<h3 class="top-project-title">Standardized Tester</h3>
 				<img src="./images/tester.png">
 				<div class="caption">
 					<h3 class="project-title">Standardized Tester</h3>
@@ -108,7 +113,7 @@
 			</div>
 
 			<div class="project">
-				<h3>URL Shortener</h3>
+				<h3 class="top-project-title">URL Shortener</h3>
 				<img src="./images/url-shortener.png">
 				<div class="caption">
 					<h3 class="project-title">URL Shortener</h3>
@@ -127,7 +132,7 @@
 			</div>
 
 			<div class="project">
-				<h3>Responsive Calculator</h3>
+				<h3 class="top-project-title">Responsive Calculator</h3>
 				<img src="./images/calc.jpg">
 				<div class="caption">
 					<h3 class="project-title">Responsive Calculator</h3>
@@ -146,7 +151,7 @@
 			</div>
 
 			<div class="project">
-				<h3>Minesweeper</h3>
+				<h3 class="top-project-title">Minesweeper</h3>
 				<img src="./images/minesweeper.png">
 				<div class="caption">
 					<h3 class="project-title">Minesweeper</h3>
