--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<tr>
 					<td>SASS</td>
 					<td></td>
-					<td>MySQL</td>
+					<td>PostgreSQL</td>
 				</tr>
 				<tr>
 					<td>Python</td>
